@@ -133,6 +133,9 @@
 					<para>Example:</para>
 					<para><code>pattern write sensor/%u/data</code></para>
 
+					<para>If the first character of a line of the ACL file is a
+						# it is treated as a comment.</para>
+
 					<para>Reloaded on reload signal. The currently loaded ACLs will be
 					freed and reloaded. Existing subscriptions will be affected
 					after the reload.</para>
