@@ -443,6 +443,8 @@
 # Control access to topics on the broker using an access control list
 # file. If this parameter is defined then only the topics listed will
 # have access.
+# If the first character of a line of the ACL file is a # it is treated as a
+# comment.
 # Topic access is added with lines of the format:
 #
 # topic [read|write] <topic>
