@@ -8,6 +8,7 @@ Broker:
   the possibility of CRIME type attacks.
 - Enable SSL_MODE_RELEASE_BUFFERS mode to reduce SSL memory usage further.
 - Add allow_duplicate_messages option.
+- ACL files can now have comment lines with # as the first character.
 
 Client library:
 - Free memory used by OpenSSL in mosquitto_lib_cleanup() where possible.
